force-app/main/default/objects/Color_Scheme__c/Color_Scheme__c.object-meta.xml
<CustomObject>
    <description>A set of colors and associated temperature ranges that define how the blanket will look for a given year&apos;s daily temps</description>
    <label>Color Scheme</label>
    <nameField>
        <label>Color Scheme Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Color Schemes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>