force-app/main/default/objects/Color_Scheme__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>the Active color scheme is the one that the user is currently knitting based on</description>
    <inlineHelpText>the Active color scheme is the one that the user is currently knitting based on</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>