force-app/main/default/objects/Color_Scheme__c/fields/Temperature_Blanket__c.field-meta.xml
<CustomField>
    <fullName>Temperature_Blanket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Temperature Blanket</description>
    <inlineHelpText>Temperature Blanket</inlineHelpText>
    <label>Temperature Blanket</label>
    <referenceTo>Temperature_Blanket__c</referenceTo>
    <relationshipLabel>Color Schemes</relationshipLabel>
    <relationshipName>Color_Schemes</relationshipName>
    <type>Lookup</type>
</CustomField>